# rust-rover-backend

./: Cargo.toml  README.md  migration.sql
assets/: index.html  script.js
assets/auth/: index.html
src/: main.rs
src/action/: mod.rs  rover.rs  todo.rs
test/http test/: README.md  db.http  redis.http  rover.http  test_ping.http
test/migration files/: migration_get_rover.sql  migration_get_rover_data.sql  migration_get_rover_operation_data.sql  migration_ping.sql  migration_rover_create.sql  migration_rover_operation_create.sql  migration_update_rover_status.sql
