[package]
name = "rust-rover-backend"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.7.3"
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = "1.28.2"
tower-http = { version = "0.5.0", features = ["fs","cors"] }
axum-extra = { version = "0.9.1", features = ["typed-header"] }
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tracing-subscriber = "0.3.17"
http = "0.2"
postgres = "0.19.9"
tokio-postgres = "0.7"
uuid = { version = "1.1", features = ["serde", "v4"] }